# Derezz

./: .gitignore  README.md  pyproject.toml
assets/: youtube_ids.parquet
derezz/: __main__.py  catalog.py  find.py  index.py  util.py
test/: test_agg.py
